# llm-zoomcamp-2026-code

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
01-agentic-rag/: agents.ipynb  ingest.py  notebook.ipynb  persistent_rag.ipynb  persistent_rag_ingest.ipynb  rag_cleaned.ipynb  rag_helper.py  sqlite-ingest.ipynb
homeworks/01/: homework.ipynb  rag_helper.py
homeworks/02/: solution.ipynb
